--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "sarhang-sales-system",
   "version": "1.0.0",
-  "description": "سیستەمی فرۆشتن بە MongoDB",
+  "description": "سیستەمی بەڕێوەبردنی فرۆشتن - Kurdish Sales Management System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'Build completed - Static files ready'",
+    "test": "echo 'No tests specified'",
+    "deploy": "npm run build"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,7 +22,23 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["sales", "mongodb", "express"],
+  "keywords": [
+    "sales",
+    "management",
+    "kurdish",
+    "express",
+    "nodejs",
+    "pdf",
+    "inventory"
+  ],
   "author": "Sarhang",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/[username]/sarhang-sales-system.git"
+  },
+  "homepage": "https://github.com/[username]/sarhang-sales-system#readme",
+  "bugs": {
+    "url": "https://github.com/[username]/sarhang-sales-system/issues"
+  }
 }
